# curupixa

./: .gitignore  ChangeLog  Makefile.am  README.md  README_references.md  autogen.sh  configure.ac  configure.ac_old
docs/: README.md  _sidebar.md  general_structure.md  hash_parameters.txt  index.html  references.md
lib/: Makefile.am  __header.h  __unused.c  config.h.in  curupixa.c  curupixa.h  global_logger.c  global_logger.h  hash_functions.c  hash_functions.h  hash_functions_generators.c  hash_functions_generators.h  index_arrangement.c  index_arrangement.h  index_permutation.c  internal_random_constants.c  internal_random_constants.h  lowlevel.c  lowlevel.h  maths_and_bits.c  maths_and_bits.h  minimiser_simplex.c  minimiser_simplex.h  quasi_random.c  quasi_random.h  quasi_random_constants.h  random_constants.c  random_constants.h  random_number.c  random_number.h  random_number_generators.c  random_number_generators.h
lib/global/: Makefile.am  global_variable.c  global_variable.h  hash_functions.c  hash_functions.h  hash_functions_generators.h  internal_random_constants.c  internal_random_constants.h  lowlevel.c  lowlevel.h  maths_and_bits.h  random_number.c  random_number.h  random_number_generators.c  random_number_generators.h
recipe/.comments/: curupixa.png.xml
tests/: Makefile.am  check_bwa.c  check_hashfunctions.c  check_instructions.c  check_intrinsics.c  debug_rng.c  dieharder_hash.c  dieharder_hashint.c  dieharder_rng.c
tests/files/: reads.fa
